fix the overflow

--- a/main.scss
+++ b/main.scss
@@ -25,6 +25,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
